@@ -57,6 +57,7 @@ January ? 2021 [Hróðvitnir]
     * "delete hero by slot" [James]
     * "get ui color", "set ui color", "get box style color",
       "get box style edge color", "get box style border" [Ralph]
+    * "get child autosort", "set child autosort" [Ralph]
 
   *** Changes
     * NPCpush:vertical and NPCpush:horizontal script constants were swapped with
